[gd_scene load_steps=9 format=3 uid="uid://dqf2n6e5mdadu"]

[ext_resource type="Script" uid="uid://bykpo4mvrl7i" path="res://addons/icosa/user.gd" id="1_lwnh3"]
[ext_resource type="PackedScene" uid="uid://c7yig47a2sqmr" path="res://addons/icosa/loading_icon.tscn" id="2_blk5g"]
[ext_resource type="Texture2D" uid="uid://bwqa7sodpxksf" path="res://addons/icosa/icons/cog.svg" id="3_fb6c0"]

[sub_resource type="Gradient" id="Gradient_fb6c0"]
offsets = PackedFloat32Array(0.3, 0.5, 0.7)
colors = PackedColorArray(0.24696359, 0.24696359, 0.24696359, 0, 0.24696359, 0.24696359, 0.24696359, 1, 0.24696359, 0.24696359, 0.24696359, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_xqmv5"]
gradient = SubResource("Gradient_fb6c0")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[sub_resource type="Gradient" id="Gradient_fqkbf"]
offsets = PackedFloat32Array(0.3, 0.5, 0.7)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_gpenq"]
gradient = SubResource("Gradient_fqkbf")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fb6c0"]
bg_color = Color(0.35686275, 0.35686275, 0.35686275, 0.4627451)

[node name="Login" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lwnh3")
metadata/_tab_index = 0

[node name="LoginDetails" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="LoginStatus" type="RichTextLabel" parent="LoginDetails"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/paragraph_separation = 15
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "You are not logged in. [url=https://icosa.gallery/device]Login Here.[/url]"
fit_content = true
horizontal_alignment = 1

[node name="LoginCode" type="LineEdit" parent="LoginDetails"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 36
placeholder_text = "Enter Code.."
alignment = 1

[node name="Loading" parent="LoginDetails" instance=ExtResource("2_blk5g")]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
value = 53.0
texture_under = SubResource("GradientTexture2D_xqmv5")
texture_progress = SubResource("GradientTexture2D_gpenq")

[node name="UserDetails" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fb6c0")

[node name="Assets" type="VBoxContainer" parent="UserDetails"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UserDetails/Assets"]
layout_mode = 2

[node name="DisplayAssets" type="VBoxContainer" parent="UserDetails/Assets"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="UserDetails/Assets/DisplayAssets"]
layout_mode = 2
size_flags_vertical = 0

[node name="Upload" type="Button" parent="UserDetails/Assets/DisplayAssets/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "upload asset.."

[node name="Settings" type="Button" parent="UserDetails/Assets/DisplayAssets/HBoxContainer"]
visible = false
layout_mode = 2
icon = ExtResource("3_fb6c0")

[node name="UserInformation" type="RichTextLabel" parent="UserDetails/Assets/DisplayAssets/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
fit_content = true
horizontal_alignment = 1

[node name="LoggedInAs" type="RichTextLabel" parent="UserDetails/Assets/DisplayAssets/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "You are logged in as %s.
"
fit_content = true
horizontal_alignment = 2
vertical_alignment = 1

[node name="Logout" type="Button" parent="UserDetails/Assets/DisplayAssets/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = " Logout "

[node name="VSplitContainer" type="VSplitContainer" parent="UserDetails/Assets/DisplayAssets"]
layout_mode = 2
size_flags_vertical = 3
drag_area_offset = 20

[node name="UserAssetsSection" type="VBoxContainer" parent="UserDetails/Assets/DisplayAssets/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Title" type="Label" parent="UserDetails/Assets/DisplayAssets/VSplitContainer/UserAssetsSection"]
layout_mode = 2
text = "My Assets"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="UserDetails/Assets/DisplayAssets/VSplitContainer/UserAssetsSection"]
layout_mode = 2
size_flags_vertical = 3

[node name="NoUserAssets" type="RichTextLabel" parent="UserDetails/Assets/DisplayAssets/VSplitContainer/UserAssetsSection/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "you have not uploaded any assets!"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="UserDetails/Assets/DisplayAssets/VSplitContainer/UserAssetsSection/PanelContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="UserAssets" type="FlowContainer" parent="UserDetails/Assets/DisplayAssets/VSplitContainer/UserAssetsSection/PanelContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="UserLikedAssetsSection" type="VBoxContainer" parent="UserDetails/Assets/DisplayAssets/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Title" type="Label" parent="UserDetails/Assets/DisplayAssets/VSplitContainer/UserLikedAssetsSection"]
layout_mode = 2
text = "Liked Assets"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="UserDetails/Assets/DisplayAssets/VSplitContainer/UserLikedAssetsSection"]
layout_mode = 2
size_flags_vertical = 3

[node name="NoLikedAssets" type="RichTextLabel" parent="UserDetails/Assets/DisplayAssets/VSplitContainer/UserLikedAssetsSection/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "you have not liked any assets!"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="UserDetails/Assets/DisplayAssets/VSplitContainer/UserLikedAssetsSection/PanelContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="UserLikedAssets" type="FlowContainer" parent="UserDetails/Assets/DisplayAssets/VSplitContainer/UserLikedAssetsSection/PanelContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[connection signal="meta_clicked" from="LoginDetails/LoginStatus" to="." method="_on_login_status_meta_clicked"]
[connection signal="text_changed" from="LoginDetails/LoginCode" to="." method="_on_login_code_text_changed"]
[connection signal="pressed" from="UserDetails/Assets/DisplayAssets/HBoxContainer/Logout" to="." method="_on_logout_pressed"]
